--- a/src/components/Loading/loading.scss
+++ b/src/components/Loading/loading.scss
@@ -41,7 +41,7 @@
   line-height: 1;
   margin: auto;
   animation: anim-rotate 2s infinite linear;
-  color: black;
+  // color: black;
   /* text-shadow: 0 0 0.25em black; */
 }
 .spinner--steps {
@@ -61,7 +61,7 @@
 .talign-center {
   text-align: center;
   width: 100%;
-  min-height: 84vh;
+  min-height: 82vh;
   display: flex;
 }
 a,
