--- a/src/components/Quote/quote.scss
+++ b/src/components/Quote/quote.scss
@@ -12,12 +12,10 @@
 
   @media (max-width: 1024px) {
     width: 80%;
-    padding: 0 80px;
   }
 
   @media (max-width: 600px) {
-    width: 90%;
-    padding: 0 50px;
-    font-size: 24px;
+    font-size: 18px;
+    margin-left: 3px;
   }
 }
